--- a/frontend/javascripts/app/views/experiment/temperature-logs.html
+++ b/frontend/javascripts/app/views/experiment/temperature-logs.html
@@ -22,7 +22,7 @@
       <div class="curve-header">
         <div class="row" >
           <div class="col-sm-4 chart-name">
-            <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart">
+            <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart" style="padding-left: 0">
               Thermal Profile
               <img class="arrow-down" src="/images/arrow-down_black.png">
             </chart-chooser>
