--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title ng-bind="pageTitle || 'Open qPCR | Chai'"></title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
   <link rel="stylesheet" href="/stylesheets/application-debug.css" media="all">
   <link rel="shortcut icon" href="favicon.ico?v=4" />
   <script type="text/javascript" src="/javascripts/application-debug.js"></script>
