--- a/frontend/javascripts/app/views/directives/v2/chart-well-switch.html
+++ b/frontend/javascripts/app/views/directives/v2/chart-well-switch.html
@@ -16,12 +16,12 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<div class="chart-well-switch" style="height: 100%; display: block;">
+<div class="chart-well-switch" style="height: 100%; display: block;">  
   <table style="height: 100%">
     <tbody>
       <tr>
-        <th style="height:20px;" class="col-header G2" ng-click="selectAllWells()" ng-style="{width: row_header_width + 'px'}"></th>
-        <th style="height:20px;" class="col-header G2" ng-class="{dragged: col.selected}" ng-mousedown="dragStart($event, 'column', col.index)" ng-mouseup="dragStop($event, 'column', col.index)" ng-mousemove="dragged($event, 'column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}">
+        <th class="col-header G2" ng-click="selectAllWells()" ng-style="{width: row_header_width + 'px'}"></th>
+        <th class="col-header G2" ng-class="{dragged: col.selected}" ng-mousedown="dragStart($event, 'column', col.index)" ng-mouseup="dragStop($event, 'column', col.index)" ng-mousemove="dragged($event, 'column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}">
           {{col.index + 1}}
         </th>
       </tr>
