--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -21,15 +21,13 @@ limitations under the License.
     <div class="chart-section" offset="0" force="true" style="height:100%; padding-left: 0px; padding-right: 0px; background: #eeeeee">
       <div>
         <!--curve-header-->
-        <div class="curve-header">
+        <div class="curve-header" ng-click="onChangeScrollView('left')">
           <div class="curve-name">
             <!-- <span class="curve-title H1" ng-click="RunExperimentCtrl.changeChartTypeModal()"> -->
-            <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart" style="padding-left: 15px;">
-              Amplification Curve
-              <img class="arrow-down" src="/images/arrow-down_black.png">
-            </chart-chooser>
+              <div class="curve-title H1 long-name">Amplification Curve</div>
+            <div class="curve-title H1 short-name">Amp. Curve</div>
           </div>
-          <div class="plot-options">
+          <div class="plot-options color-by">
             <p class="B1-Amplification">Color by</p>
             <form role="form" class="form-horizontal B1-Amplification" name="colorBy" novalidate>
               <div class="form-group" style="margin: 0;">
@@ -49,7 +47,7 @@ limitations under the License.
               </div>
             </form>
           </div>
-          <div class="plot-options" style="padding-right: 40px;">
+          <div class="plot-options plot-type">
             <p class="B1-Amplification">Plot Type</p>
             <form role="form" class="form-horizontal B1-Amplification" name="plotType" novalidate>
               <div class="form-group B1-Amplification" style="margin: 0;">
@@ -69,7 +67,7 @@ limitations under the License.
               </div>
             </form>
           </div>
-          <div class="plot-options subheader-switches SH" style="margin-top: 30px; padding-right: 40px;">
+          <div class="plot-options subheader-switches SH">
             <div class="item-switch">
               <label class="B1-Amplification">Baseline Sub.</label>
               <switch class="switch" ng-model="baseline_subtraction"></switch>
@@ -87,10 +85,22 @@ limitations under the License.
             </div>
           </div>
         </div>
+        
         <div class="curve-body amplification-chart" style="height:100%; display: flex; flex-direction: row; justify-content: space-between;">
-          <div class="curve-plot" aspect-ratio offset-x='160 + 10 + 20' offset-y='100 + 160 + 20 + 10' min-width='680' max-width='1020' min-height='400' max-height='600' offset-top='201' id="curve-plot" style="display: block;padding: 0;">
+          <div 
+            class="curve-plot" 
+            aspect-ratio 
+            offset-x='160 + 10 + 20' 
+            offset-y='100 + 160 + 20 + 10' 
+            min-width='320' 
+            max-width='1020' 
+            min-height='320' 
+            max-height='600' 
+            offset-top='201' 
+            id="curve-plot" style="display: block;padding: 0;"
+          >
             <div class="chart-wrapper">
-              <div class="chart-container" style="height:100%; min-width: 660px; min-height: 340px;">
+              <div class="chart-container" style="height:100%; min-width: 480px; min-height: 320px;">
                 <div class="chart-error B1" ng-show="retrying && !fetching && error">
                   <strong class="text-black">Unable to load chart data</strong>
                   <p ng-bind="error"></p>
@@ -191,9 +201,27 @@ limitations under the License.
           </div>
         </div>
       </div>
-      <div class="choose-chart" style="position: relative;margin: 0 10px; height: 160px;">
+      <div class="additional-info-mobile">
+        <div class="info-wrapper">
+          <div class="header CB4-M">Targets</div>
+          <div class="target-container">
+            <div class="target-list">
+              <div class="target-line" ng-repeat="target in targetsSet">
+                <div class="target-name">
+                  <label class="dot" ng-attr-style="background-color: {{target.color}};"></label>
+                  {{target.name}}
+                </div>
+                  <div class="sm-switch">
+                    <switch class="switch" ng-model="targetsSetHided[target.id]"></switch>
+                  </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="choose-chart">
         <chart-well-switch 
-          style="position: absolute; height: 100%;" 
+          style="position: absolute; height: 100%;"
           ng-model="wellButtons" 
           is-dual="is_dual_channel"
           color-by="color_by" 
@@ -201,12 +229,12 @@ limitations under the License.
           samples="samples"
           targets="targets"
           init-sample-color="init_sample_color"
-          >
-          </chart-well-switch>
+        >
+        </chart-well-switch>
       </div>
     </div>
     <div class="table-container" force="true">
-      <div class="view-mode-panel">
+      <div class="view-mode-panel" ng-click="onChangeScrollView('right', $event)">
         <span class="CB4">Table View</span>
         <div class="view-mode-switch" ng-click="onChangeViewMode()">
           <div class="switch-item CB4" ng-class="{'active': isSampleMode}">Simple</div>
