--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -23,15 +23,12 @@ limitations under the License.
     <div class="content" style="padding-top:0px; height: 100%; display: flex;">
       <div class="chart-section" offset="0" force="true" style="height:100%; padding-left: 0px; padding-right: 0px; background: #eeeeee">
         <div>
-          <div class="curve-header">
+          <div class="curve-header" ng-click="onChangeScrollView('left')">
             <div class="curve-name">
               <!-- <span class="curve-title H1" ng-click="RunExperimentCtrl.changeChartTypeModal()"> -->
-              <chart-chooser class="curve-title H1" experiment="experiment" current-chart="$parent.chart" style="padding-left: 15px;">
-                Melt Curve
-                <img class="arrow-down" src="/images/arrow-down_black.png">
-              </chart-chooser>
+              <div class="curve-title H1">Melt Curve</div>
             </div>
-            <div class="plot-options">
+            <div class="plot-options color-by">
               <p class="B1-Amplification">Color by</p>
               <form role="form" class="form-horizontal B1-Amplification" name="colorBy" novalidate>
                 <div class="form-group" style="margin: 0;">
@@ -51,7 +48,7 @@ limitations under the License.
                 </div>
               </form>
             </div>
-            <div class="plot-options" style="padding-right: 40px;">
+            <div class="plot-options plot-type">
               <p class="B1-Amplification">Plot Type</p>
               <form role="form" class="form-horizontal B1-Amplification" name="plotType" novalidate>
                 <div class="form-group B1-Amplification" style="margin: 0;">
@@ -73,9 +70,20 @@ limitations under the License.
             </div>
           </div>
           <div class="curve-body amplification-chart" style="height:100%; display: flex; flex-direction: row; justify-content: space-between;">
-            <div class="curve-plot" aspect-ratio offset-x='160 + 10 + 20' offset-y='100 + 160 + 20 + 10' min-width='680' max-width='1020' min-height='400' max-height='600' offset-top='176' id="curve-plot" style="display: block;padding: 0;">
+            <div 
+              class="curve-plot" 
+              aspect-ratio 
+              offset-x='160 + 10 + 20' 
+              offset-y='100 + 160 + 20 + 10' 
+              min-width='320' 
+              max-width='1020' 
+              min-height='320' 
+              max-height='600' 
+              offset-top='176' 
+              id="curve-plot" style="display: block;padding: 0;"
+            >            
               <div class="chart-wrapper">
-                <div class="chart-container" style="height:100%; min-width: 660px; min-height: 340px;">
+                <div class="chart-container" style="height:100%; min-width: 480px; min-height: 320px;">
                   <div class="chart-error B1" ng-show="retrying && !fetching && error">
                     <strong class="text-black">Unable to load chart data</strong>
                     <p ng-bind="error"></p>
@@ -167,7 +175,27 @@ limitations under the License.
             </div>            
           </div>
         </div>
-        <div class="choose-chart" style="position: relative;margin: 0 10px; height: 160px;">
+
+        <div class="additional-info-mobile">
+          <div class="info-wrapper">
+            <div class="header CB4-M">Targets</div>
+            <div class="target-container">
+              <div class="target-list">
+                <div class="target-line" ng-repeat="target in targetsSet">
+                  <div class="target-name">
+                    <label class="dot" ng-attr-style="background-color: {{target.color}};"></label>
+                    {{target.name}}
+                  </div>
+                    <div class="sm-switch">
+                      <switch class="switch" ng-model="targetsSetHided[target.id]"></switch>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>  
+
+        <div class="choose-chart" style="position: relative;">
           <chart-well-switch 
             style="position: absolute; height: 100%;" 
             ng-model="wellButtons" 
@@ -184,7 +212,7 @@ limitations under the License.
       </div>
       <div class="table-container" force="true">
         <table fixed-result-header offset="0" min-width="620" class="detail-mode-table">
-          <thead>
+          <thead ng-click="onChangeScrollView('right')">
             <tr>
               <th class="CB4-M item-center" width="35px">Clr</th>
               <th class="CB4-M item-center" width="40px">Omit</th>
