--- a/frontend/javascripts/app/views/experiment/run-experiment.html
+++ b/frontend/javascripts/app/views/experiment/run-experiment.html
@@ -17,7 +17,9 @@
     limitations under the License.
 -->
 <div ng-controller="RunExperimentCtrl">
+  
   <div class="pika-wrapper" side-menu-layout is-open="false">
+
     <header-status experiment-id="experiment.id">
       <div class="stripes-and-name" toggle-sidemenu>
         <div class="stripes">
@@ -25,20 +27,19 @@
         </div>
       </div>
     </header-status>
+    
     <div class="inner-wrapper">
-      <div class="inner-container" style="min-width: 0">
-        <div class="chart-screens-container">
-          <div ng-if="chart === 'amplification'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/amplification-chart.html'">
-          </div>
-          <div ng-if="chart === 'standard-curve'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/standard-curve.html'">
-          </div>
-          <div ng-if="chart === 'temperature-logs'" style="position:absolute; width: 100%; height: 100%; min-height: 668px;" ng-include src="'app/views/experiment/temperature-logs.html'">
-          </div>
-          <div ng-if="chart === 'melt-curve'" style="position:absolute; width: 100%; height: 100%; min-width: 1368px; min-height: 668px;" ng-include src="'app/views/experiment/melt-curve.html'">
-          </div>
+      <div class="inner-container" style="min-width: 0; height: 100%;">
+        <div class="chart-screens-container" full-view-height force='true' offset='100'>
+          <div class="chart-screen-wapper" ng-if="chart === 'amplification'" ng-include src="'app/views/experiment/amplification-chart.html'"></div>
+          <div class="chart-screen-wapper" ng-if="chart === 'standard-curve'" ng-include src="'app/views/experiment/standard-curve.html'"></div>
+          <div class="chart-screen-wapper" ng-if="chart === 'temperature-logs'" ng-include src="'app/views/experiment/temperature-logs.html'"></div>
+          <div class="chart-screen-wapper" ng-if="chart === 'melt-curve'" ng-include src="'app/views/experiment/melt-curve.html'"></div>
         </div>
       </div>
     </div>
-  </div>
+
+  </div>  
+
   <status-bar experiment-id="experiment.id"></status-bar>
 </div>
