--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -1240,6 +1240,14 @@
 
     .table-container {
       height: auto;
+      table.detail-mode-table{
+        .melt-omit{
+          display: none;
+        }
+        .melt-sample, .melt-target{
+          width: 90px !important;
+        }
+      }      
     }
 
     .content {
@@ -1263,9 +1271,14 @@
       &.two-column{
         display: flex;
         justify-content: space-between;
+        box-shadow: none;
+        background: transparent;
         .info-wrapper{
           width: 50%;
+          background: #fff;
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
           &.parameters{
+            margin-right: 10px;
             .header{
               background: #000;
             }
