update touch app design

--- a/touchapp/src/app/components/dashboard/home/home.component.html
+++ b/touchapp/src/app/components/dashboard/home/home.component.html
@@ -18,10 +18,10 @@
   -->
 <div class="homepage-container">
   <div class="button-panel">
-    <img src="/assets/images/new-logo.svg" class="logo">
+    <img src="/assets/images/touch/openqpcr-sm.svg" class="logo">
     <div class="d-flex">
       <button class="ch-button primary mr-10 CB4-M">Run a Test Kit</button>
-      <button class="ch-button CB4-M" (click)="onSetting()">Setting</button>
+      <button class="ch-button CB4-M" (click)="onSetting()">Settings</button>
     </div>
   </div>
   <div class="experiments">
