--- a/touchapp/src/app/components/setting/breadcrumbs/breadcrumbs.component.scss
+++ b/touchapp/src/app/components/setting/breadcrumbs/breadcrumbs.component.scss
@@ -23,5 +23,10 @@ ul.breadcrumbs {
     &.active{
       color: #000;
     }
+
+    a{
+      text-decoration: none;
+      color: #1470CC;
+    }
   }
 }
