--- a/touchapp/src/app/components/setting/edit-user/edit-user.component.html
+++ b/touchapp/src/app/components/setting/edit-user/edit-user.component.html
@@ -16,8 +16,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<div class="new-user" [ngClass]="{'opened-board': openKeyboard}" #container>
-  <h2 class="CX3-M mb-15">New User Details</h2>
+<div class="edit-user" [ngClass]="{'opened-board': openKeyboard}" #container>
+  <h2 class="CX3-M mb-15">Edit User Details</h2>
   <div class="d-flex align-items-center mb-20">
     <ch-toggle-switch class="mr-10 d-flex align-items-center" [(checked)]="userData.is_admin" (click)="onIsAdminSelect()"></ch-toggle-switch>
     <span class="CX3">Admin Access</span>
