--- a/touchapp/src/app/components/setting/home/home.component.html
+++ b/touchapp/src/app/components/setting/home/home.component.html
@@ -23,7 +23,7 @@
     <button class="ch-button CX3-M" (click)="onGoHome()">Back to Home</button>
   </div>
   <div class="stat-box">
-    <label class="logo mb-30">&nbsp;</label>
+    <img src="/assets/images/touch/chai-badge.svg" class="logo mb-30">
     <div class="stat-line">
       <span class="CX3">Hardware Version:</span>
       <span class="CX3-M">888-88-8888</span>
