--- a/touchapp/src/app/components/setting/setting.component.html
+++ b/touchapp/src/app/components/setting/setting.component.html
@@ -18,7 +18,7 @@
   -->
 <div class="setting-container">
   <div class="nav-container">
-    <setting-nav [crumbItems]="crumbItems"></setting-nav>
+    <setting-nav></setting-nav>
   </div>
   <div class="content">
     <router-outlet></router-outlet>
