--- a/touchapp/src/app/components/dashboard/home/home.component.html
+++ b/touchapp/src/app/components/dashboard/home/home.component.html
@@ -20,7 +20,7 @@
   <div class="button-panel">
     <img src="/assets/images/touch/openqpcr-sm.svg" class="logo">
     <div class="d-flex">
-      <button class="ch-button primary mr-10 CB4-M">Run a Test Kit</button>
+      <button class="ch-button primary mr-10 CB4-M" (click)="onRunTestKit()">Run a Test Kit</button>
       <button class="ch-button CB4-M" (click)="onSetting()">Settings</button>
     </div>
   </div>
