--- a/touchapp/src/assets/stylesheets/keyboard.scss
+++ b/touchapp/src/assets/stylesheets/keyboard.scss
@@ -23,6 +23,7 @@
 
 .simple-keyboard.hg-theme-ios.hg-theme-default {
   background-color: #eaeaea !important;
+  font-family: "DINOT--Regular","HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
   .hg-row {
     .hg-button {
       flex-grow: 1;
