--- a/touchapp/src/styles.scss
+++ b/touchapp/src/styles.scss
@@ -13,5 +13,5 @@ html, body{
 @import "assets/stylesheets/fonts";
 @import "assets/stylesheets/chart-section";
 @import "assets/stylesheets/common";
+@import "assets/stylesheets/modal";
 @import "assets/stylesheets/keyboard";
-
