--- a/frontend/javascripts/app/views/settings/v2/network-panel.html
+++ b/frontend/javascripts/app/views/settings/v2/network-panel.html
@@ -43,11 +43,11 @@
         <label class="CX5 mb-15">
           {{isHotspotActive ? 'Deactivate hotspot to edit details' : 'Set hotspot details'}}
         </label>
-        <modal-input-field caption="Network Name" class="mb-20" error="hotspotErrors.network_name">
-          <input type="text" class="CX5-M" ng-model="hotspotInfo.network_name" placeholder="Network Name" autocomplete="network name">
+        <modal-input-field caption="Network Name" class="mb-20" error="hotspotErrors.ssid">
+          <input type="text" class="CX5-M" ng-model="hotspotInfo.ssid" placeholder="Network Name" autocomplete="network name" ng-readonly="isHotspotActive">
         </modal-input-field>
         <modal-input-field caption="Password" class="mb-20" error="hotspotErrors.password" label="Must be at least 8 characters">
-          <input type="password" class="CX5-M" ng-model="hotspotInfo.password" placeholder="Password" autocomplete="password">
+          <input type="password" class="CX5-M" ng-model="hotspotInfo.password" placeholder="Password" autocomplete="password" ng-readonly="isHotspotActive">
         </modal-input-field>
         <div class="hotspot-status" ng-show="isHotspotActive">
           <span class="CX5">Hotspot status:</span>
