--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -211,19 +211,19 @@ limitations under the License.
         </div>
       </div>
       <div class="table-container" force="true">
-        <table fixed-result-header offset="0" min-width="400" class="detail-mode-table">
+        <table fixed-result-header offset="0" min-width="400" class="detail-mode-table" rz-table id="detail_mode_table">
           <thead ng-click="onChangeScrollView('right')">
             <tr>
               <th class="CB4-M item-center" width="35px">Clr</th>
               <th class="CB4-M item-center melt-omit" width="40px">Omit</th>
               <th class="CB4-M item-center" width="45px" >Well</th>
-              <th class="CB4-M melt-sample" width="25%" >Sample</th>
-              <th class="CB4-M item-center" width="50px">Type</th>
-              <th class="CB4-M melt-target" width="25%">Target</th>
-              <th class="CB4-M item-center" width="12.5%"><span>T<sub>m</sub> 1</span></th>
-              <th class="CB4-M item-center" width="12.5%"><span>T<sub>m</sub> 2</span></th>
-              <th class="CB4-M item-center" width="12.5%"><span>T<sub>m</sub> 3</span></th>
-              <th class="CB4-M item-center" width="12.5%"><span>T<sub>m</sub> 4</span></th>
+              <th class="CB4-M melt-sample resizable" width="25%" >Sample</th>
+              <th class="CB4-M item-center resizable" width="50px">Type</th>
+              <th class="CB4-M melt-target resizable" width="25%">Target</th>
+              <th class="CB4-M item-center resizable" width="12.5%"><span>T<sub>m</sub> 1</span></th>
+              <th class="CB4-M item-center resizable" width="12.5%"><span>T<sub>m</sub> 2</span></th>
+              <th class="CB4-M item-center resizable" width="12.5%"><span>T<sub>m</sub> 3</span></th>
+              <th class="CB4-M item-center resizable" width="12.5%"><span>T<sub>m</sub> 4</span></th>
             </tr>
           </thead>
           <tbody>
