--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -247,19 +247,19 @@ limitations under the License.
       </div>
 
       <div class="table-container" force="true">
-        <table fixed-result-header offset="0" min-width="400" class="detail-mode-table">
+        <table fixed-result-header offset="0" min-width="400" class="detail-mode-table" rz-table id="detail_mode_table">
           <thead ng-click="onChangeScrollView('right')">
             <tr>
               <th class="CB4-M item-center" width="35px">Clr</th>
               <th class="CB4-M item-center" width="40px">Omit</th>
               <th class="CB4-M item-center" width="45px" >Well</th>
-              <th class="CB4-M " width="25%" >Sample</th>
-              <th class="CB4-M item-center" width="50px">Type</th>
-              <th class="CB4-M " width="25%">Target</th>
-              <th class="CB4-M item-center" width="10%"><span>C<sub>q</sub></span></th>
-              <th class="CB4-M item-center" width="10%"><span>C<sub>q</sub> M</span></th>
-              <th class="CB4-M item-center" width="15%">Qty</th>
-              <th class="CB4-M item-center" width="15%">Qty M</th>
+              <th class="CB4-M resizable" width="25%" >Sample</th>
+              <th class="CB4-M item-center resizable" width="50px">Type</th>
+              <th class="CB4-M resizable" width="25%">Target</th>
+              <th class="CB4-M item-center resizable" width="10%"><span>C<sub>q</sub></span></th>
+              <th class="CB4-M item-center resizable" width="10%"><span>C<sub>q</sub> M</span></th>
+              <th class="CB4-M item-center resizable" width="15%">Qty</th>
+              <th class="CB4-M item-center resizable" width="15%">Qty M</th>
             </tr>
           </thead>
           <tbody>
