update right side table for exp

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -241,14 +241,14 @@ limitations under the License.
           <div class="switch-item CB4" ng-class="{'active': !isSampleMode}">Detailed</div>
         </div>
       </div>
-      <table fixed-result-header rz-table offset="60" min-width="400" ng-show="!isSampleMode" rz-busy="isSampleMode" class="detail-mode-table" id="detail_mode_table">
+      <table fixed-result-header rz-table offset="60" min-width="540" ng-show="!isSampleMode" rz-busy="isSampleMode" class="detail-mode-table" id="detail_mode_table">
         <thead>
           <tr>
             <th class="CB4-M item-center" width="35px">Clr</th>
             <th class="CB4-M item-center" width="40px">Omit</th>
             <th class="CB4-M item-center" width="45px" >Well</th>
             <th class="CB4-M resizable" width="25%" >Sample</th>
-            <th class="CB4-M item-center resizable" width="50px">Type</th>
+            <th class="CB4-M item-center" width="50px">Type</th>
             <th class="CB4-M resizable" width="25%">Target</th>
             <th class="CB4-M item-center resizable" width="10%"><span>C<sub>q</sub></span></th>
             <th class="CB4-M item-center resizable" width="10%"><span>C<sub>q</sub> M</span></th>
