--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -911,7 +911,7 @@
     padding-right: 0; 
     padding-left: 0; 
     margin-top:0px; 
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: auto;
     background: #fff;
 
