--- a/frontend/javascripts/app/views/experiment/melt-curve.html
+++ b/frontend/javascripts/app/views/experiment/melt-curve.html
@@ -269,7 +269,7 @@ limitations under the License.
                 </span>
               </td>
               <td class="CB4 melt-sample" ng-click="onSelectRow(well_item, $index)">
-                <span class="one-line-span">{{samples[well_item.well_num - 1].name | truncate:30}}</span>
+                <span class="one-line-span" uib-tooltip="{{samples[well_item.well_num - 1].name}}">{{samples[well_item.well_num - 1].name}}</span>
               </td>
               <td class="CB4 type-td item-center" ng-click="onSelectRow(well_item, $index)">
                 <span class="CB4 type-span" style="width: 20px; height: 20px;" ng-if="well_item.well_type">
