--- a/frontend/stylesheets/chaipcrui.css.scss
+++ b/frontend/stylesheets/chaipcrui.css.scss
@@ -522,3 +522,36 @@ span.stage-num-cycles .textinput, span.step-temperature .textinput, span.step-ho
   margin: 20px 0;
   text-align: left;
 }
+
+/******** Custom ToolTip ************/
+.table-container table{
+  .tooltip{
+    &.in{
+      opacity: 1;
+    }
+    &.top{
+      margin-top: 0;
+      .tooltip-arrow{
+        display: none;
+      }
+    }
+    &.bottom{
+      margin-top: 0;
+      .tooltip-arrow{
+        display: none;
+      }
+    }
+
+    .tooltip-inner{
+      background: #D6F5FF;
+      padding: 8px;
+      border-radius: 2px;
+      font-size: 15px;
+      color: #000;
+      font-family: 'DINOT--Medium', Arial, sans-serif;
+      font-size: 15px;
+      line-height: 22px;
+      box-shadow: 0px 1px 1px #ddd;      
+    }
+  }
+}
