--- a/frontend/stylesheets/home-page.css.scss
+++ b/frontend/stylesheets/home-page.css.scss
@@ -118,9 +118,10 @@
       width: 60%;
       height: 100%;
       color: white;
-      text-align: center;
+      text-align: left;
       line-height: 64px;
       float: left;
+      padding-left: 20px;
     }
     .home-page-edit-exp-container {
       width: 40%;
